[build-system]
requires = ["setuptools >= 77.0.3"]
build-backend = "setuptools.build_meta"

[project]
name = "pyefiboot"
version = "0.0.1"
authors = [
  { name="Jason But", email="jbut@swin.edu.au" },
]
description = "Python API to manage EFI Boot Entries"
readme = "README.md"
requires-python = ">=3.11"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
license = "MIT"
license-files = ["LICEN[CS]E*"]
dependencies = []

#[project.scripts]
#notify-broadcast = "notify_broadcast.notify_broadcast:notify_broadcast"

[project.urls]
Homepage = "https://github.com/jason-but/pyefiboot"
Issues = "https://github.com/jason-but/pyefiboot/issues"